Script file added

--- a/Lab2.html
+++ b/Lab2.html
@@ -6,11 +6,11 @@
     <title>Lab2</title>
 </head>
 <body>
-    <h1>Some text...</h1><br><br>
+    <h1>Lab2...</h1><br><br>
     <input id="number"><br><br>
     <div id="operators">
-        <button id="plus" class="operator" onclick="op='+'">+</button>
-        <button id="minus" class="operator" onclick="op='-'">-</button>
+        <button id="plus" class="operator" onclick="op='+'">+1</button>
+        <button id="minus" class="operator" onclick="op='-'">-1</button>
     </div>
     <br>
     <button onclick="func()">Result</button>
