--- a/Lab2.html
+++ b/Lab2.html
@@ -3,7 +3,7 @@
 <head>
     <script src="Lab2.js"></script>
     <meta charset="UTF-8">
-    <title>Lab2</title>
+    <title>Lab2Web</title>
 </head>
 <body>
     <h1>Lab2...</h1><br><br>
